--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           </g>
         </svg>
       </div>
+      <div class="footer">
+        <p>Here is the footer</p>
+      </div>
     </div>
   </body>
 </html>
