--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   </head>
   <body>
     <div>
-      <div class="head" style="display: flex; align-items: center;justify-content: center; background-color: blueviolet;">
+      <div
+        class="head"
+        style="
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: blueviolet;
+        "
+      >
         <h1>Welcome to Donut World!!</h1>
         <svg
           fill="#000000"
@@ -44,7 +52,7 @@
         </svg>
       </div>
       <div class="footer">
-        <p>Here is the footer</p>
+        <p>Here is the not footer</p>
       </div>
     </div>
   </body>
