footer 2nd time

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </svg>
       </div>
       <div class="footer">
-        <p>No this is footer</p>
+        <p>Aagin I am telling this is footer</p>
       </div>
     </div>
   </body>
