--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
       <div class="footer">
         <p>Aagin I am telling this is footer</p>
       </div>
+      <form action="">
+        Name: <input type="text" />
+        <button>Click</button>
+      </form>
     </div>
   </body>
 </html>
