--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
       <form action="">
         Name: <input type="text" />
         <button>Click</button>
+
+        <button type="submit"></button>
       </form>
     </div>
   </body>
