--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git Project</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>This is the nav bar</nav>
     <main>This the main part</main>
-</body>
+  </body>
 </html>
